--- a/arch/arm/cpu/armv7/mx6/Kconfig
+++ b/arch/arm/cpu/armv7/mx6/Kconfig
@@ -80,6 +80,12 @@ config TARGET_MX6QSABREAUTO
 	select DM
 	select DM_THERMAL
 
+config TARGET_MX6OPENREX
+	bool "mx6openrex"
+	select SUPPORT_SPL
+	select DM
+	select DM_THERMAL
+
 config TARGET_MX6SABRESD
 	bool "mx6sabresd"
 	select SUPPORT_SPL
@@ -164,6 +170,7 @@ source "board/embest/mx6boards/Kconfig"
 source "board/freescale/mx6qarm2/Kconfig"
 source "board/freescale/mx6qsabreauto/Kconfig"
 source "board/freescale/mx6sabresd/Kconfig"
+source "board/fedevel/mx6openrex/Kconfig"
 source "board/freescale/mx6slevk/Kconfig"
 source "board/freescale/mx6sxsabresd/Kconfig"
 source "board/freescale/mx6ul_14x14_evk/Kconfig"
